Feature/add pets (#2)
* Add initial pet setup

* Add index and show request specs

* Add create pet spec and edge cases

* Add pagination specs

* Remove debugger

* Update README and Swagger doc

* Update Swagger docs

* Update Swagger docs and specs
